--- a/charts/kubezero-storage/charts/gemini/Chart.yaml
+++ b/charts/kubezero-storage/charts/gemini/Chart.yaml
@@ -2,8 +2,9 @@ apiVersion: v1
 appVersion: "2.0"
 description: Automated backup and restore of PersistentVolumes using the VolumeSnapshot
   API
+kubeVersion: '>= 1.22.0-0'
 maintainers:
 - email: robertb@fairwinds.com
   name: rbren
 name: gemini
-version: 2.0.0
+version: 2.1.3
