--- a/charts/kubezero-storage/charts/lvm-localpv/values.yaml
+++ b/charts/kubezero-storage/charts/lvm-localpv/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 release:
-  version: "1.0.0"
+  version: "1.2.0"
 
 imagePullSecrets:
 # - name: "image-pull-secret"
@@ -23,12 +23,12 @@ lvmNode:
     name: "csi-node-driver-registrar"
     image:
       # Make sure that registry name end with a '/'.
-      # For example : k8s.gcr.io/ is a correct value here and quay.io is incorrect
-      registry: k8s.gcr.io/
+      # For example : registry.k8s.io/ is a correct value here and quay.io is incorrect
+      registry: registry.k8s.io/
       repository: sig-storage/csi-node-driver-registrar
       pullPolicy: IfNotPresent
       # Overrides the image tag whose default is the chart appVersion.
-      tag: v2.3.0
+      tag: v2.8.0
   updateStrategy:
     type: RollingUpdate
   annotations: {}
@@ -54,6 +54,13 @@ lvmNode:
     create: true
     name: lvm-localpv-csi-node-critical
   logLevel: 5
+  # Configure kubernetes client API requests rate.
+  kubeClientRateLimiter:
+    # Configure the number of queries per second.
+    qps: 0
+    # Configure the maximum number of queries allowed after
+    # accounting for rolled over qps from previous seconds.
+    burst: 0
 
 
 # lvmController contains the configurables for
@@ -67,42 +74,42 @@ lvmController:
     name: "csi-resizer"
     image:
       # Make sure that registry name end with a '/'.
-      # For example : k8s.gcr.io/ is a correct value here and quay.io is incorrect
-      registry: k8s.gcr.io/
+      # For example : registry.k8s.io/ is a correct value here and quay.io is incorrect
+      registry: registry.k8s.io/
       repository: sig-storage/csi-resizer
       pullPolicy: IfNotPresent
       # Overrides the image tag whose default is the chart appVersion.
-      tag: v1.2.0
+      tag: v1.8.0
   snapshotter:
     name: "csi-snapshotter"
     image:
       # Make sure that registry name end with a '/'.
-      # For example : k8s.gcr.io/ is a correct value here and quay.io is incorrect
-      registry: k8s.gcr.io/
+      # For example : registry.k8s.io/ is a correct value here and quay.io is incorrect
+      registry: registry.k8s.io/
       repository: sig-storage/csi-snapshotter
       pullPolicy: IfNotPresent
       # Overrides the image tag whose default is the chart appVersion.
-      tag: v4.0.0
+      tag: v6.2.2
   snapshotController:
     name: "snapshot-controller"
     image:
       # Make sure that registry name end with a '/'.
-      # For example : k8s.gcr.io/ is a correct value here and quay.io is incorrect
-      registry: k8s.gcr.io/
+      # For example : registry.k8s.io/ is a correct value here and quay.io is incorrect
+      registry: registry.k8s.io/
       repository: sig-storage/snapshot-controller
       pullPolicy: IfNotPresent
       # Overrides the image tag whose default is the chart appVersion.
-      tag: v4.0.0
+      tag: v6.2.2
   provisioner:
     name: "csi-provisioner"
     image:
       # Make sure that registry name end with a '/'.
-      # For example : k8s.gcr.io/ is a correct value here and quay.io is incorrect
-      registry: k8s.gcr.io/
+      # For example : registry.k8s.io/ is a correct value here and quay.io is incorrect
+      registry: registry.k8s.io/
       repository: sig-storage/csi-provisioner
       pullPolicy: IfNotPresent
       # Overrides the image tag whose default is the chart appVersion.
-      tag: v3.0.0
+      tag: v3.5.0
   updateStrategy:
     type: RollingUpdate
   annotations: {}
@@ -123,6 +130,13 @@ lvmController:
   priorityClass:
     create: true
     name: lvm-localpv-csi-controller-critical
+  # Configure kubernetes client API requests rate.
+  kubeClientRateLimiter:
+    # Configure the number of queries per second.
+    qps: 0
+    # Configure the maximum number of queries allowed after
+    # accounting for rolled over qps from previous seconds.
+    burst: 0
 
 # lvmPlugin is the common csi container used by the
 # controller statefulset and node daemonset
@@ -130,19 +144,20 @@ lvmPlugin:
   name: "openebs-lvm-plugin"
   image:
     # Make sure that registry name end with a '/'.
-    # For example : k8s.gcr.io/ is a correct value here and quay.io is incorrect
+    # For example : registry.k8s.io/ is a correct value here and quay.io is incorrect
     registry:
     repository: openebs/lvm-driver
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
-    tag: 1.0.0
+    tag: 1.2.0
   ioLimits:
     enabled: false
     containerRuntime: containerd
     readIopsPerGB: ""
     writeIopsPerGB: ""
   # The TCP port number used for exposing lvm-metrics.
-  # If not set, service will not be created to expose metrics endpoint to serviceMonitor and listen-address flag will not be set.
+  # If not set, service will not be created to expose metrics endpoint
+  # to serviceMonitor andlisten-address flag will not be set.
   metricsPort: 9500
   # Comma seperated list of k8s worker node topologies
   allowedTopologies: "kubernetes.io/hostname,"
@@ -151,6 +166,9 @@ role: openebs-lvm
 
 crd:
   enableInstall: true
+  # Specify installation of the kubernetes-csi volume snapshot CRDs if your Kubernetes distribution
+  # or another storage operator already manages them.
+  volumeSnapshot: true
 
 serviceAccount:
   lvmController:
