--- a/charts/kubezero/values.yaml
+++ b/charts/kubezero/values.yaml
@@ -43,6 +43,8 @@ cert-manager:
 storage:
   enabled: false
   targetRevision: 0.8.3
+  lvm-localpv:
+    enabled: false
   aws-ebs-csi-driver:
     enabled: false
   aws-efs-csi-driver:
