Istio version bump for 1.26

--- a/charts/kubezero/templates/istio-private-ingress.yaml
+++ b/charts/kubezero/templates/istio-private-ingress.yaml
@@ -5,6 +5,10 @@ gateway:
 
   {{- with index .Values "istio-private-ingress" "gateway" "replicaCount" }}
   replicaCount: {{ . }}
+  {{- if gt (int .) 1 }}
+  podDisruptionBudget:
+    minAvailable: 1
+  {{- end }}
   {{- end }}
 
   {{- if not (index .Values "istio-private-ingress" "gateway" "affinity") }}
