Prepare metrics module for renovate

--- a/charts/kubezero-metrics/Chart.yaml
+++ b/charts/kubezero-metrics/Chart.yaml
@@ -13,22 +13,20 @@ keywords:
 maintainers:
   - name: Stefan Reimer
     email: stefan@zero-downtime.net
+# https://github.com/prometheus-community/helm-charts/tree/main/charts/kube-prometheus-stack
 dependencies:
   - name: kubezero-lib
     version: ">= 0.1.6"
     repository: https://cdn.zero-downtime.net/charts/
-    # https://github.com/prometheus-community/helm-charts/tree/main/charts/kube-prometheus-stack
   - name: kube-prometheus-stack
     version: 45.27.2
-    # Switch back to upstream once all alerts are fixed eg. etcd gpcr
-    # repository: https://prometheus-community.github.io/helm-charts
+    repository: https://prometheus-community.github.io/helm-charts
   - name: prometheus-adapter
     version: 4.1.1
     repository: https://prometheus-community.github.io/helm-charts
     condition: prometheus-adapter.enabled
   - name: prometheus-pushgateway
     version: 2.1.3
-    # Switch back to upstream once namespaces are supported
     repository: https://prometheus-community.github.io/helm-charts
     condition: prometheus-pushgateway.enabled
-kubeVersion: ">= 1.25.0"
+kubeVersion: ">= 1.26.0"
