--- a/charts/kubezero-logging/Chart.yaml
+++ b/charts/kubezero-logging/Chart.yaml
@@ -21,12 +21,14 @@ dependencies:
     repository: https://cdn.zero-downtime.net/charts/
   - name: eck-operator
     version: 2.4.0
-    # repository: https://helm.elastic.co
+    repository: https://helm.elastic.co
     condition: eck-operator.enabled
   - name: fluentd
     version: 0.3.9
+    repository: https://fluent.github.io/helm-charts
     condition: fluentd.enabled
   - name: fluent-bit
     version: 0.24.0
+    repository: https://fluent.github.io/helm-charts
     condition: fluent-bit.enabled
-kubeVersion: ">= 1.24.0"
+kubeVersion: ">= 1.26.0"
